# universidad

./: .gitignore  .gitmodules  update_taller.py
gerencia_y_gestion/: SA-MEN-05-2022
gerencia_y_gestion/Literatura/EXPOSICIONES/: Temas exposiciones.xlsx
gerencia_y_gestion/Literatura/LITERATURA DE REFERENCIA/: PMBOK_6ta_Edicion_Espanol(1).docx
gerencia_y_gestion/Literatura/PRESENTACIONES/: 1. Bases conceptuales del proyecto en ingeniería.pptx
gerencia_y_gestion/Literatura/TALLERES/TALLER 2 Oferta de conocimiento en GGP/: Bautista Diego, Otero Julián, Ortiz Duvay.docx  Gutierrez Lorena, Ojeda Julian.xlsx  Nicolas Hinestroza-Nicolas Prieto-Juan Palacios.xlsx
gerencia_y_gestion/taller1/: punto4.asv  taller1.aux  taller1.bcf  taller1.fdb_latexmk  taller1.fls  taller1.run.xml  taller1.tex
gerencia_y_gestion/taller1/_minted-main/: 0C6B82D63357DF551698FE503DAE44C4729616B55BC37F12F938F36E56113BA7.pygtex  3C8A389B51D9C8222FA1A17BBFAE464B729616B55BC37F12F938F36E56113BA7.pygtex  4C0C0ED7A6D1F76688B68436BB5C5DD6729616B55BC37F12F938F36E56113BA7.pygtex  CB5468959F87F8AD617E9ECED8A8CE7B729616B55BC37F12F938F36E56113BA7.pygtex  F515C7319485ABB1BA6323245F55037B729616B55BC37F12F938F36E56113BA7.pygtex  lovelace.pygstyle
gerencia_y_gestion/taller2/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
senales_2/Taller variables de estado/: code_completo.m
senales_2/primer_parcial/: filtro_iir.m
servomecanismos/: Grafica_parcial_punto_2b.m
servomecanismos/proyecto_academico/: .gitignore  README.md  caracterizacion_trayectoria_trebol.asv  caracterizacion_trayectoria_trebol.m  caso_critico.m  modelo_motor_dc.m  modelo_motores.mat
servomecanismos/proyecto_academico/Robot_2R/: Cargo.toml
servomecanismos/proyecto_academico/Robot_2R/.cargo/: config.toml
servomecanismos/proyecto_academico/backend/: README.md  __init__.py  main.py  requirements.txt  theme.json
servomecanismos/proyecto_academico/backend/calibration/: __init__.py  calibration_manager.py  homing.py  motor_identification.py
servomecanismos/proyecto_academico/backend/communication/: __init__.py  manager.py  serial_conn.py
servomecanismos/proyecto_academico/backend/esp32_firmware/: Cargo.toml  README.md
servomecanismos/proyecto_academico/backend/esp32_firmware/src/: main.rs
servomecanismos/proyecto_academico/backend/gui/: __init__.py  calibration_wizard.py  config_panel.py  connection_dialog.py  main_window.py  trajectory_view.py
servomecanismos/proyecto_academico/backend/kinematics/: __init__.py  inverse.py
servomecanismos/proyecto_academico/backend/rust_comm/: Cargo.toml  README.md
servomecanismos/proyecto_academico/backend/rust_comm/src/: discover.rs  lib.rs  protocol.rs  serial_link.rs
servomecanismos/proyecto_academico/esp32/: platformio.ini
(+40 files in other folders)
