[package]
name = "esp32_2r_firmware"
version = "1.0.0"
edition = "2021"
description = "Firmware para ESP32 del robot 2R — control PID 1 kHz, MCPWM 25 kHz, telemetría 100 Hz"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# Framework ESP32 (MCPWM, PCNT, UART)
esp-hal = { version = "0.19", features = ["esp32"] }
esp-backtrace = { version = "0.13", features = ["esp32", "exception-handler", "panic-handler"] }
esp-println = { version = "0.10", features = ["esp32", "uart"] }

# Serialización (no_std)
serde = { version = "1.0", default-features = false, features = ["derive"] }
heapless = "0.8"

# Utilidades
libm = "0.2"

