[package]
name = "rust_comm"
version = "0.1.0"
edition = "2021"
description = "Módulo de comunicación de alto rendimiento entre PC y ESP32 para robot 2R"

[lib]
name = "rust_comm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serialport = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crc32fast = "1.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
